 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content">
	 	
  <TableLayout
    android:scrollbars="horizontal|vertical"
    android:id="@+id/tabela_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:stretchColumns="1">

    <TableRow android:layout_gravity="center" >
       <TextView
        android:id="@+id/texto_nada1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nada" />
    </TableRow>      
      
    <TableRow>
     <TextView
        android:id="@+id/texto_antartic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_antartic" />
     <ImageButton
        android:id="@+id/botao_play_antartic"
        android:contentDescription="@string/play"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_antartic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>    
    
    <TableRow>
     <TextView
        android:id="@+id/texto_goonies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_goonies" />
     <ImageButton
        android:id="@+id/botao_play_goonies"
        android:contentDescription="@string/play"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_goonies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>    
    
    <TableRow>
     <TextView
        android:id="@+id/texto_guardic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_guardic" />
     <ImageButton
        android:id="@+id/botao_play_guardic"
        android:contentDescription="@string/play"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_guardic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>    
    
    <TableRow>
     <TextView
        android:id="@+id/texto_guardic2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_guardic2" />
     <ImageButton
        android:id="@+id/botao_play_guardic2"
        android:contentDescription="@string/play"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_guardic2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>  
    
    <TableRow>
     <TextView
        android:id="@+id/texto_jetbomber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_jetbomber" />
     <ImageButton
        android:id="@+id/botao_play_jetbomber"
        android:contentDescription="@string/play"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_jetbomber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>    
  
    <TableRow>
     <TextView
        android:id="@+id/texto_kingsv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_kingsv" />
     <ImageButton
        android:id="@+id/botao_play_kingsv"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_kings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>
  
    <TableRow>
     <TextView
        android:id="@+id/texto_kingsv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_kingsv2" />
     <ImageButton
        android:id="@+id/botao_play_kingsv2"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_kings2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>
  
    <TableRow>
     <TextView
        android:id="@+id/texto_magicaltree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_magicaltree" />
     <ImageButton
        android:id="@+id/botao_play_magicaltree"
        android:contentDescription="@string/play"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_magicaltree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>    

        
    <TableRow>
     <TextView
        android:id="@+id/texto_nemesis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_nemesis2" />
     <ImageButton
        android:id="@+id/botao_play_nemesis2"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_nemesis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>
    
    <TableRow>
     <TextView
        android:id="@+id/texto_outrun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_outrun" />
     <ImageButton
        android:id="@+id/botao_play_outrun"
        android:contentDescription="@string/play"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_outrun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>   
    
    <TableRow>
     <TextView
        android:id="@+id/texto_pacmania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_pacmania" />
     <ImageButton
        android:id="@+id/botao_play_pacmania"
        android:contentDescription="@string/play"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_pacmania"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>    
    
    <TableRow>
     <TextView
        android:id="@+id/texto_pippols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_pippols" />
     <ImageButton
        android:id="@+id/botao_play_pippols"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_pippols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>
     
    <TableRow>
     <TextView
        android:id="@+id/texto_starwars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_starwars" />
     <ImageButton
        android:id="@+id/botao_play_starwars"
        android:contentDescription="@string/play"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_starwars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>  
    
    <TableRow>
     <TextView
        android:id="@+id/texto_zanac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_zanac" />
     <ImageButton
        android:id="@+id/botao_play_zanac"
        android:contentDescription="@string/play"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/msxmusic" />
     <Button
        android:id="@+id/botao_use_ringtone_zanac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_ringtone" />
    </TableRow>    
    
  </TableLayout>
	 
</ScrollView>